de/15.9/config/index.rst
|Fess| Konfigurationsleitfaden
================================

Ein umfassender Leitfaden zur Konfiguration von |Fess|. Jeder Abschnitt ist nach Zweck organisiert.

.. toctree::
   :maxdepth: 2
   :caption: Erste Schritte

   intro
   properties

.. toctree::
   :maxdepth: 2
   :caption: Grundkonfiguration

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Crawler-Konfiguration

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Data Store-Konnektoren

   datastore/index

.. toctree::
   :maxdepth: 2
   :caption: Suchfunktionen-Konfiguration

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration
   rank-fusion
   search-semantic

.. toctree::
   :maxdepth: 2
   :caption: Sicherheitskonfiguration

   security-role
   security-virtual-host
   ldap-integration
   multitenancy

.. toctree::
   :maxdepth: 2
   :caption: SSO-Konfiguration

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: LLM/KI-Suchmodus-Konfiguration

   llm-overview
   llm-ollama
   llm-openai
   llm-gemini
   rag-chat

.. toctree::
   :maxdepth: 2
   :caption: Scripting

   scripting-overview
   scripting-javascript
   scripting-groovy

.. toctree::
   :maxdepth: 2
   :caption: Leistung und Betrieb

   rate-limiting
   load-control

.. toctree::
   :maxdepth: 2
   :caption: Systemverwaltung

   admin-logging
   admin-log-notification
   admin-index-backup
   admin-index-export
   admin-analyzer
   admin-opensearch-dashboards
